--- a/Promises/index.html
+++ b/Promises/index.html
@@ -6,7 +6,7 @@
     <title>Promises</title>
 </head>
 <body>
-    <h2>Promises</h2>
+    <h2>Promises Ka</h2>
     <script src="main.js"></script>
     
 </body>
